# vibbers_blog

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: auth.py  database.py  helfun.py  main.py  mcp_connect.py  mcp_main.py  models.py  schemas.py
app/templates/: blog_list.html  home.html
migrations/: env.py
migrations/versions/: 0001_initial.py  17d9f6235d8c_add_is_blog_column_to_blog_model_fr_.py  a4ab35f6fff4_create_blog_and_template_tables.py  c34fc75b1ab1_add_is_blog_column_to_blog_model.py  e077a1b392f7_add_user_and_api_table.py  f4abaa02f7d8_change_user_id_to_username.py
tests/: test_auth.py  test_helfun.py  test_main.py
