[project]
name = "syncpod-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "fastmcp>=3.4.2",
    "greenlet>=3.5.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "passlib[bcrypt,bycrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pywin32>=312",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
